Update Sec 1 Homework 2.ipynb

--- a/Sec 1 Homework 2.ipynb
+++ b/Sec 1 Homework 2.ipynb
@@ -402,11 +402,11 @@
    "id": "ffffe847",
    "metadata": {},
    "source": [
-    "# 5.5) Your skills from the MQE to help Mr. Liu's ventures\n",
+    "# 5.5) Your skills from the MQE to help Mr. Phillip Liu's ventures\n",
     "\n",
-    "As a current MQE student, the classes that I've took have been training me in how to interpret, analyze and deliver results. Mainly in statistical programming, the program has been teaching many useful skills such as econometrics, machine learning, as well as asset forecasting through the classes that I have/am taking so far. \n",
+    "As a current MQE student, the classes that I took have been training me in how to interpret, analyze and deliver results. Mainly in statistical programming, the program has been teaching many useful skills such as econometrics, machine learning, as well as asset forecasting. \n",
     "\n",
-    "Meanwhile, I have a couple of very recent experience which was completed last fall in my industry applied projects, where I worked with two different companies to deliver business solutions. One of them was with an investment management company, where I've succesfully built a tool to gather key business/industry metrics for every listed companies using large language model api to help equity researchers automate their data gathering for fundamental analysis. Another project, where I've worked with a multinational audio system company was to implement generative AI by creating a tool to improve e-commerce customer experience and data acquisition processes. (no further information available; subject to an NDA.)"
+    
    ]
   },
   {
